introduce multiple editorial changes

--- a/data_viz.ipynb
+++ b/data_viz.ipynb
@@ -333,7 +333,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#increasing the scale\n",
+    "# Increasing the scale\n",
     "y[:,0] = y[:,0]*100"
    ]
   },
@@ -392,7 +392,7 @@
     }
    ],
    "source": [
-    "#alternatively one can use subplot function to get direct access to the underlying plotting obejcts\n",
+    "# Alternatively one can use subplot function to get direct access to the underlying plotting obejcts\n",
     "plt.figure(figsize=(10,6))\n",
     "plt.subplot(211)\n",
     "plt.plot(y[:,0], lw=1.5, label='1st')\n",
@@ -463,7 +463,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# other plot types \n",
+    "# Other plot types \n",
     "y = np.random.standard_normal((10000, 2))"
    ]
   },
@@ -586,7 +586,7 @@
     }
    ],
    "source": [
-    "#Histograms\n",
+    "# Histograms\n",
     "plt.figure(figsize=(10,6))\n",
     "plt.hist(y, label=['1st', '2nd'], color=['g', 'b'], stacked=True, alpha=0.5, range=(-3, 3), bins=20)\n",
     "plt.legend(loc=0)\n",
@@ -615,7 +615,7 @@
     }
    ],
    "source": [
-    "#Boxplots\n",
+    "# Boxplots\n",
     "fig, ax = plt.subplots(figsize=(10, 6))\n",
     "plt.boxplot(y)\n",
     "plt.setp(ax, xticklabels=['1st', '2nd'])\n",
@@ -654,7 +654,7 @@
     }
    ],
    "source": [
-    "#Examples of plt.setp\n",
+    "# Examples of plt.setp\n",
     "line = plt.plot(y, 'r')\n",
     "plt.setp(line, linestyle='--')\n"
    ]
@@ -665,7 +665,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Ploting mathematical functions\n",
+    "# Ploting mathematical functions\n",
     "def func(x):\n",
     "    return 0.5 * np.exp(x) + 1\n",
     "\n",
@@ -799,7 +799,7 @@
     }
    ],
    "source": [
-    "#changing marker and viewing angle\n",
+    "# Changing marker and viewing angle\n",
     "fig = plt.figure(figsize=(12, 8))\n",
     "ax = fig.add_subplot(111, projection='3d')\n",
     "ax.view_init(30, 60)\n",
@@ -809,27 +809,6 @@
     "ax.set_zlabel('implied_vol')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
