--- a/data_viz.ipynb
+++ b/data_viz.ipynb
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -900,58 +900,58 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>2019-01-01</th>\n",
-       "      <td>100.884762</td>\n",
-       "      <td>101.226997</td>\n",
-       "      <td>101.226271</td>\n",
-       "      <td>96.299949</td>\n",
-       "      <td>106.744726</td>\n",
+       "      <td>99.684335</td>\n",
+       "      <td>95.660897</td>\n",
+       "      <td>101.064474</td>\n",
+       "      <td>101.523941</td>\n",
+       "      <td>102.409381</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2019-01-02</th>\n",
-       "      <td>106.309804</td>\n",
-       "      <td>89.449973</td>\n",
-       "      <td>100.631356</td>\n",
-       "      <td>101.500580</td>\n",
-       "      <td>111.989625</td>\n",
+       "      <td>103.400751</td>\n",
+       "      <td>88.341369</td>\n",
+       "      <td>105.541771</td>\n",
+       "      <td>102.896040</td>\n",
+       "      <td>97.211666</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2019-01-03</th>\n",
-       "      <td>107.620776</td>\n",
-       "      <td>79.221756</td>\n",
-       "      <td>107.034324</td>\n",
-       "      <td>103.565273</td>\n",
-       "      <td>112.060045</td>\n",
+       "      <td>107.483509</td>\n",
+       "      <td>85.443148</td>\n",
+       "      <td>109.807167</td>\n",
+       "      <td>101.191802</td>\n",
+       "      <td>101.817431</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2019-01-04</th>\n",
-       "      <td>110.167329</td>\n",
-       "      <td>71.122347</td>\n",
-       "      <td>100.035427</td>\n",
-       "      <td>96.785926</td>\n",
-       "      <td>112.302598</td>\n",
+       "      <td>102.363545</td>\n",
+       "      <td>90.784789</td>\n",
+       "      <td>99.772591</td>\n",
+       "      <td>101.518974</td>\n",
+       "      <td>93.859710</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2019-01-07</th>\n",
-       "      <td>117.655856</td>\n",
-       "      <td>74.230174</td>\n",
-       "      <td>103.132135</td>\n",
-       "      <td>89.202712</td>\n",
-       "      <td>123.651495</td>\n",
+       "      <td>93.958601</td>\n",
+       "      <td>90.972004</td>\n",
+       "      <td>94.448769</td>\n",
+       "      <td>95.618874</td>\n",
+       "      <td>91.540238</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                     a           b           c           d           e\n",
-       "2019-01-01  100.884762  101.226997  101.226271   96.299949  106.744726\n",
-       "2019-01-02  106.309804   89.449973  100.631356  101.500580  111.989625\n",
-       "2019-01-03  107.620776   79.221756  107.034324  103.565273  112.060045\n",
-       "2019-01-04  110.167329   71.122347  100.035427   96.785926  112.302598\n",
-       "2019-01-07  117.655856   74.230174  103.132135   89.202712  123.651495"
+       "                     a          b           c           d           e\n",
+       "2019-01-01   99.684335  95.660897  101.064474  101.523941  102.409381\n",
+       "2019-01-02  103.400751  88.341369  105.541771  102.896040   97.211666\n",
+       "2019-01-03  107.483509  85.443148  109.807167  101.191802  101.817431\n",
+       "2019-01-04  102.363545  90.784789   99.772591  101.518974   93.859710\n",
+       "2019-01-07   93.958601  90.972004   94.448769   95.618874   91.540238"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6480,7 +6480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6491,7 +6491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -6499,15 +6499,15 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "DatetimeIndex: 22 entries, 2019-10-04 to 2019-09-05\n",
+      "DatetimeIndex: 1066 entries, 2017-10-05 to 2013-09-05\n",
       "Data columns (total 5 columns):\n",
-      "Price       22 non-null float64\n",
-      "Open        22 non-null float64\n",
-      "High        22 non-null float64\n",
-      "Low         22 non-null float64\n",
-      "Change %    22 non-null object\n",
+      "Price       1066 non-null float64\n",
+      "Open        1066 non-null float64\n",
+      "High        1066 non-null float64\n",
+      "Low         1066 non-null float64\n",
+      "Change %    1066 non-null object\n",
       "dtypes: float64(4), object(1)\n",
-      "memory usage: 1.0+ KB\n"
+      "memory usage: 50.0+ KB\n"
      ]
     }
    ],
@@ -6516,11 +6516,254 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 72,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Change %</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2017-10-05</th>\n",
+       "      <td>1.1711</td>\n",
+       "      <td>1.1758</td>\n",
+       "      <td>1.1780</td>\n",
+       "      <td>1.1698</td>\n",
+       "      <td>-0.42%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-10-04</th>\n",
+       "      <td>1.1760</td>\n",
+       "      <td>1.1743</td>\n",
+       "      <td>1.1788</td>\n",
+       "      <td>1.1733</td>\n",
+       "      <td>0.14%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-10-03</th>\n",
+       "      <td>1.1744</td>\n",
+       "      <td>1.1733</td>\n",
+       "      <td>1.1775</td>\n",
+       "      <td>1.1696</td>\n",
+       "      <td>0.10%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-10-02</th>\n",
+       "      <td>1.1732</td>\n",
+       "      <td>1.1818</td>\n",
+       "      <td>1.1818</td>\n",
+       "      <td>1.1730</td>\n",
+       "      <td>-0.69%</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-09-29</th>\n",
+       "      <td>1.1814</td>\n",
+       "      <td>1.1787</td>\n",
+       "      <td>1.1834</td>\n",
+       "      <td>1.1773</td>\n",
+       "      <td>0.24%</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Price    Open    High     Low Change %\n",
+       "Date                                               \n",
+       "2017-10-05  1.1711  1.1758  1.1780  1.1698   -0.42%\n",
+       "2017-10-04  1.1760  1.1743  1.1788  1.1733    0.14%\n",
+       "2017-10-03  1.1744  1.1733  1.1775  1.1696    0.10%\n",
+       "2017-10-02  1.1732  1.1818  1.1818  1.1730   -0.69%\n",
+       "2017-09-29  1.1814  1.1787  1.1834  1.1773    0.24%"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# "
+    "raw.head()"
    ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2013-09-11</th>\n",
+       "      <td>1.3270</td>\n",
+       "      <td>1.3327</td>\n",
+       "      <td>1.3245</td>\n",
+       "      <td>1.3312</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-09-10</th>\n",
+       "      <td>1.3255</td>\n",
+       "      <td>1.3276</td>\n",
+       "      <td>1.3230</td>\n",
+       "      <td>1.3268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-09-09</th>\n",
+       "      <td>1.3169</td>\n",
+       "      <td>1.3281</td>\n",
+       "      <td>1.3159</td>\n",
+       "      <td>1.3255</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-09-06</th>\n",
+       "      <td>1.3119</td>\n",
+       "      <td>1.3189</td>\n",
+       "      <td>1.3104</td>\n",
+       "      <td>1.3180</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2013-09-05</th>\n",
+       "      <td>1.3207</td>\n",
+       "      <td>1.3223</td>\n",
+       "      <td>1.3110</td>\n",
+       "      <td>1.3120</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Open    High     Low   Price\n",
+       "Date                                      \n",
+       "2013-09-11  1.3270  1.3327  1.3245  1.3312\n",
+       "2013-09-10  1.3255  1.3276  1.3230  1.3268\n",
+       "2013-09-09  1.3169  1.3281  1.3159  1.3255\n",
+       "2013-09-06  1.3119  1.3189  1.3104  1.3180\n",
+       "2013-09-05  1.3207  1.3223  1.3110  1.3120"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quotes = raw[['Open', 'High', 'Low', 'Price']]\n",
+    "quotes.\n",
+    "quotes = quotes.iloc[-60:]\n",
+    "quotes.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "StudyError",
+     "evalue": "Missing Columns: close",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mStudyError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-76-dc3ba77d6141>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m                 name='EUR/USD')\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m plyo.iplot(qf.iplot(asFigure=True),\n\u001b[0m\u001b[1;32m      7\u001b[0m           \u001b[0;31m#image='png',\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m           filename='qf_01')\n",
+      "\u001b[0;32m/anaconda3/lib/python3.7/site-packages/cufflinks/quant_figure.py\u001b[0m in \u001b[0;36miplot\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m   1198\u001b[0m                 \u001b[0md\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdeep_update\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1199\u001b[0m                 \u001b[0md\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtools\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdateColors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1200\u001b[0;31m                 \u001b[0mfig\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1201\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1202\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'kind'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'candle'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'candlestick'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'ohlc'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda3/lib/python3.7/site-packages/cufflinks/plotlytools.py\u001b[0m in \u001b[0;36m_figure\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m   1292\u001b[0m \t\"\"\"\n\u001b[1;32m   1293\u001b[0m         \u001b[0mkwargs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'asFigure'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1294\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miplot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1295\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1296\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0m_layout\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda3/lib/python3.7/site-packages/cufflinks/plotlytools.py\u001b[0m in \u001b[0;36m_iplot\u001b[0;34m(self, kind, data, layout, filename, sharing, title, xTitle, yTitle, zTitle, theme, colors, colorscale, fill, width, dash, mode, interpolation, symbol, size, barmode, sortbars, bargap, bargroupgap, bins, histnorm, histfunc, orientation, boxpoints, annotations, keys, bestfit, bestfit_colors, mean, mean_colors, categories, x, y, z, text, gridcolor, zerolinecolor, margin, labels, values, secondary_y, secondary_y_title, subplots, shape, error_x, error_y, error_type, locations, lon, lat, asFrame, asDates, asFigure, asImage, dimensions, asPlot, asUrl, online, **kwargs)\u001b[0m\n\u001b[1;32m   1038\u001b[0m                                 \u001b[0mkind\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'candlestick'\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mkind\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;34m'candle'\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0mkind\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1039\u001b[0m                                 \u001b[0mkw\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcheck_kwargs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mOHLC_KWARGS\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1040\u001b[0;31m                                 \u001b[0md\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mta\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_ohlc_dict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mvalidate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'ohlc'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkw\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1041\u001b[0m \t\t\t\t_d=dict(type=kind,\n\u001b[1;32m   1042\u001b[0m                                                         \u001b[0mopen\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'open'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/anaconda3/lib/python3.7/site-packages/cufflinks/ta.py\u001b[0m in \u001b[0;36m_ohlc_dict\u001b[0;34m(df_or_figure, open, high, low, close, volume, validate, **kwargs)\u001b[0m\n\u001b[1;32m     74\u001b[0m                                         \u001b[0merrs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms_names\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0m_\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m                         \u001b[0;32mif\u001b[0m \u001b[0merrs\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 76\u001b[0;31m                                 \u001b[0;32mraise\u001b[0m \u001b[0mStudyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Missing Columns: {0}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m', '\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0merrs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     77\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     78\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mc_dir\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mStudyError\u001b[0m: Missing Columns: close"
+     ]
+    }
+   ],
+   "source": [
+    "qf = cf.QuantFig(quotes, \n",
+    "                title='EUR/USD Exchange Rate',\n",
+    "                legend='top',\n",
+    "                name='EUR/USD')\n",
+    "\n",
+    "plyo.iplot(qf.iplot(asFigure=True),\n",
+    "          #image='png',\n",
+    "          filename='qf_01')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
