--- a/speed_up.ipynb
+++ b/speed_up.ipynb
@@ -11,12 +11,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loops"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# creating basic set up"
+    "import random\n",
+    "def average_py(n):\n",
+    "    s = 0\n",
+    "    for i in range(n):\n",
+    "        s += random.random()\n",
+    "    return s / n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 1000000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 99.4 ms, sys: 2.35 ms, total: 102 ms\n",
+      "Wall time: 101 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.49951423343146406"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time average_py(n)"
    ]
   },
   {
