change to list comprehension instead of function

--- a/speed_up.ipynb
+++ b/speed_up.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,24 +42,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 99.4 ms, sys: 2.35 ms, total: 102 ms\n",
-      "Wall time: 101 ms\n"
+      "CPU times: user 100 ms, sys: 2.64 ms, total: 103 ms\n",
+      "Wall time: 104 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.49951423343146406"
+       "0.49952021747706016"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,6 +67,60 @@
    "source": [
     "%time average_py(n)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.12 µs ± 12.3 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Times the function several times for a more reliable estimate\n",
+    "%timeit average_py(n) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 17 µs, sys: 0 ns, total: 17 µs\n",
+      "Wall time: 21 µs\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.5271709580133926"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Alt. uses list comprehension instead\n",
+    "%time sum([random.random() for _ in range(n)]) / n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
