numpy loop speedup by factor of 10 with preallocating memory

--- a/speed_up.ipynb
+++ b/speed_up.ipynb
@@ -1,16 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import numpy as np"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -33,33 +23,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 1000000"
+    "n = 100000000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 100 ms, sys: 2.64 ms, total: 103 ms\n",
-      "Wall time: 104 ms\n"
+      "CPU times: user 9.36 s, sys: 38.1 ms, total: 9.4 s\n",
+      "Wall time: 9.47 s\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.49952021747706016"
+       "0.500008597925132"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,14 +60,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.12 µs ± 12.3 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
+      "9.25 s ± 222 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -111,30 +101,81 @@
     }
    ],
    "source": [
-    "# Alt. uses list comprehension instead\n",
+    "# Alt. uses list comprehension instead of a function\n",
     "%time sum([random.random() for _ in range(n)]) / n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Vectorization with Numpy"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def average_np(n):\n",
+    "    s = np.random.random(n)\n",
+    "    return s.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 943 ms, sys: 154 ms, total: 1.1 s\n",
+      "Wall time: 1.1 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.5000150953863709"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time average_np(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.09 s ± 2.11 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit average_np(n)"
+   ]
   },
   {
    "cell_type": "code",
