wow! super fast caching

--- a/speed_up.ipynb
+++ b/speed_up.ipynb
@@ -2181,7 +2181,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### The major problem with recursice algorithm is that intermediate results are not "
+    "#### The major problem with recursice algorithm is that intermediate results are not cached but rather recalculated. To avoid this particular problem, a decorator can be used that takes care of the caching of the intermediate results. This speeds up the execution by multiple orders of magnitude:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from functools import lru_cache as cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@cache(maxsize=None)\n",
+    "def fib_rec_py2(n):\n",
+    "    if n < 2:\n",
+    "        return n \n",
+    "    else:\n",
+    "        return fib_rec_py2(n-1)"
    ]
   }
  ],
