--- a/speed_up.ipynb
+++ b/speed_up.ipynb
@@ -2195,7 +2195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2204,8 +2204,71 @@
     "    if n < 2:\n",
     "        return n \n",
     "    else:\n",
-    "        return fib_rec_py2(n-1)"
+    "        return fib_rec_py2(n-1) + fib_rec_py2(n-2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 19 µs, sys: 14 µs, total: 33 µs\n",
+      "Wall time: 37.2 µs\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "9227465"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time fib_rec_py2(35)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 36 µs, sys: 5 µs, total: 41 µs\n",
+      "Wall time: 45.1 µs\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "23416728348467685"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time fib_rec_py2(80)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
