show that inerative version is much faster

--- a/speed_up.ipynb
+++ b/speed_up.ipynb
@@ -2057,6 +2057,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Recursive"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
@@ -2261,6 +2268,54 @@
    ],
    "source": [
     "%time fib_rec_py2(80)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Iterative"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fib_it_py(n):\n",
+    "    x, y = 0, 1\n",
+    "    for i in range(1, n + 1):\n",
+    "        x, y = y, x + y \n",
+    "        return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 5 µs, sys: 1 µs, total: 6 µs\n",
+      "Wall time: 6.91 µs\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time fib_it_py(80)"
    ]
   },
   {
