find bug in iterative numba

--- a/speed_up.ipynb
+++ b/speed_up.ipynb
@@ -2292,15 +2292,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5 µs, sys: 1 µs, total: 6 µs\n",
-      "Wall time: 6.91 µs\n"
+      "CPU times: user 4 µs, sys: 1 µs, total: 5 µs\n",
+      "Wall time: 5.96 µs\n"
      ]
     },
     {
@@ -2309,13 +2309,59 @@
        "1"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "%time fib_it_py(80)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fib_it_nb = numba.jit(fib_it_py)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 43.9 ms, sys: 5.42 ms, total: 49.3 ms\n",
+      "Wall time: 48.9 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time fib_it_nb(80)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# not sure this is the expected behavior --> draft and send email to the publisher"
    ]
   },
   {
