--- a/stats.ipynb
+++ b/stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +16,55 @@
     "plt.style.use('seaborn')\n",
     "%matplotlib inline"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = [1, 2, 3, 4, 5, 3, 7, 2]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_duplicates(x):\n",
+    "    my_list = []\n",
+    "    for e in x:\n",
+    "        if e in my_list:\n",
+    "            print('found duplicate', e)\n",
+    "        else:\n",
+    "            my_list.append(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "found duplicate 3\n",
+      "found duplicate 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "find_duplicates(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
