timing NumPy implementation gives 0.5 sec

--- a/speed_up.ipynb
+++ b/speed_up.ipynb
@@ -2458,11 +2458,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A NumPy implementation of this algorithm is rather conscise but also memory-intensive. Total execution time given the parameterization is about one second:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = int(1e7)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%time rn = np.random.random()"
+   ]
   }
  ],
  "metadata": {
