compute Pi in a for loop with Numba speed up

--- a/speed_up.ipynb
+++ b/speed_up.ipynb
@@ -2475,11 +2475,168 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 248 ms, sys: 42.8 ms, total: 290 ms\n",
+      "Wall time: 293 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time rn = np.random.random((n, 2)) * 2 -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "160000000"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rn.nbytes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 226 ms, sys: 80.4 ms, total: 307 ms\n",
+      "Wall time: 235 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([0.80373952, 0.3129789 , 1.01706212, 1.13040828, 0.14103403,\n",
+       "       0.90985983, 1.10216923, 0.96354946])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time distance=np.sqrt((rn ** 2).sum(axis=1))\n",
+    "distance[:8].round(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 15.5 ms, sys: 4.18 ms, total: 19.7 ms\n",
+      "Wall time: 19.2 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time frac = (distance <= 1.0).sum() / len(distance)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.1421912"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pi_mcs = frac * 4\n",
+    "pi_mcs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Function below uses a for loop and implement Monte Carlo simulation in a memory-efficient manner. Note that the random numbers are not scaled in this case. The execution time is longer than teh NumPy version, but the Numba version is faster than NumPy:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mcs_pi_py(n):\n",
+    "    circle = 0\n",
+    "    for _ in range(n):\n",
+    "        x, y = random.random(), random.random()\n",
+    "        if (x ** 2 + y ** 2) ** 0.5 <= 1:\n",
+    "            circle += 1\n",
+    "    return (4 * circle) / n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 3.81 s, sys: 12.4 ms, total: 3.82 s\n",
+      "Wall time: 3.89 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3.1414004"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time mcs_pi_py(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%time rn = np.random.random()"
+    "mcs_pi_nb = numba.jit(mcs_pi_py)"
    ]
   }
  ],
