add function to recombine binomial tree

--- a/speed_up.ipynb
+++ b/speed_up.ipynb
@@ -3773,6 +3773,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Binomial Trees"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "S0 = 36.\n",
+    "T = 1.0\n",
+    "r = 0.06\n",
+    "sigma = 0.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simulate_tree(M):\n",
+    "    dt = T / M \n",
+    "    u = math.exp(sigma * math.sqrt(dt))\n",
+    "    d = 1 / u\n",
+    "    S = np.zeros((M + 1, M + 1))\n",
+    "    S[0,0] = S0\n",
+    "    z = 1\n",
+    "    for t in range(1, M + 1):\n",
+    "        for i in range(z):\n",
+    "            S[i, t] = S[i, t-1] * u\n",
+    "            S[i+1, t] = S[i, t-1] * d\n",
+    "        z +=1\n",
+    "    return S"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
