set print format for the tree

--- a/speed_up.ipynb
+++ b/speed_up.ipynb
@@ -3826,7 +3826,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "np.set_printoptions(formatter={'float':\n",
+    "                              lambda x: '%6.2f' %})"
+   ]
   }
  ],
  "metadata": {
