take measurement of time to simulate tree for 500 time intervals

--- a/speed_up.ipynb
+++ b/speed_up.ipynb
@@ -3823,13 +3823,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
     "np.set_printoptions(formatter={'float':\n",
-    "                              lambda x: '%6.2f' %})"
+    "                              lambda x: '%6.2f' % x})"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 36.00,  39.79,  43.97,  48.59,  53.71],\n",
+       "       [  0.00,  32.57,  36.00,  39.79,  43.97],\n",
+       "       [  0.00,   0.00,  29.47,  32.57,  36.00],\n",
+       "       [  0.00,   0.00,   0.00,  26.67,  29.47],\n",
+       "       [  0.00,   0.00,   0.00,   0.00,  24.13]])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "simulate_tree(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 99.1 ms, sys: 3.87 ms, total: 103 ms\n",
+      "Wall time: 105 ms\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 36.00,  36.32,  36.65, ..., 3095.69, 3123.50, 3151.57],\n",
+       "       [  0.00,  35.68,  36.00, ..., 3040.81, 3068.13, 3095.69],\n",
+       "       [  0.00,   0.00,  35.36, ..., 2986.89, 3013.73, 3040.81],\n",
+       "       ...,\n",
+       "       [  0.00,   0.00,   0.00, ...,   0.42,   0.42,   0.43],\n",
+       "       [  0.00,   0.00,   0.00, ...,   0.00,   0.41,   0.42],\n",
+       "       [  0.00,   0.00,   0.00, ...,   0.00,   0.00,   0.41]])"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time simulate_tree(500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
