set up tree with NumPy

--- a/speed_up.ipynb
+++ b/speed_up.ipynb
@@ -3890,11 +3890,104 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### NumPy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "M = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 2, 3, 4],\n",
+       "       [0, 1, 2, 3, 4],\n",
+       "       [0, 1, 2, 3, 4],\n",
+       "       [0, 1, 2, 3, 4],\n",
+       "       [0, 1, 2, 3, 4]])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "up = np.arange(M + 1)\n",
+    "up = np.resize(up, (M + 1, M + 1))\n",
+    "up "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 0, 0],\n",
+       "       [2, 2, 2, 2, 2],\n",
+       "       [4, 4, 4, 4, 4],\n",
+       "       [6, 6, 6, 6, 6],\n",
+       "       [8, 8, 8, 8, 8]])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "down = up.T * 2\n",
+    "down "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3,  4],\n",
+       "       [-2, -1,  0,  1,  2],\n",
+       "       [-4, -3, -2, -1,  0],\n",
+       "       [-6, -5, -4, -3, -2],\n",
+       "       [-8, -7, -6, -5, -4]])"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "up - down "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "d"
+   ]
   }
  ],
  "metadata": {
