add function for recombining tree with NumPy structures:

--- a/speed_up.ipynb
+++ b/speed_up.ipynb
@@ -3982,12 +3982,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "d"
+    "dt = T / M"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 36.00,  39.79,  43.97,  48.59,  53.71],\n",
+       "       [ 29.47,  32.57,  36.00,  39.79,  43.97],\n",
+       "       [ 24.13,  26.67,  29.47,  32.57,  36.00],\n",
+       "       [ 19.76,  21.84,  24.13,  26.67,  29.47],\n",
+       "       [ 16.18,  17.88,  19.76,  21.84,  24.13]])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "S0 * np.exp(sigma * math.sqrt(dt) * (up - down))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def simulate_tree_np(M):\n",
+    "    dt = T / M\n",
+    "    up = np.arange(M + 1)\n",
+    "    up = np.resize(up, (M + 1, M + 1))\n",
+    "    down = up.transpose() * 2\n",
+    "    S = S0 * np.exp(sigma * math.sqrt(dt) * (up - down))\n",
+    "    return S"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 36.00,  39.79,  43.97,  48.59,  53.71],\n",
+       "       [ 29.47,  32.57,  36.00,  39.79,  43.97],\n",
+       "       [ 24.13,  26.67,  29.47,  32.57,  36.00],\n",
+       "       [ 19.76,  21.84,  24.13,  26.67,  29.47],\n",
+       "       [ 16.18,  17.88,  19.76,  21.84,  24.13]])"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "simulate_tree_np(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
