speedup with Numba up to of 7 runs, 10000 loops each

--- a/speed_up.ipynb
+++ b/speed_up.ipynb
@@ -4087,6 +4087,87 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Numba"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "NOte: financial algorithm should be well suited to optimization through Numba dynamic compilation. And indeed, another speedup compared to the NumPy version of an order of magnitude is pbserved -->"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "simulate_tree_nb = numba.jit(simulate_tree)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 36.00,  39.79,  43.97,  48.59,  53.71],\n",
+       "       [  0.00,  32.57,  36.00,  39.79,  43.97],\n",
+       "       [  0.00,   0.00,  29.47,  32.57,  36.00],\n",
+       "       [  0.00,   0.00,   0.00,  26.67,  29.47],\n",
+       "       [  0.00,   0.00,   0.00,   0.00,  24.13]])"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "simulate_tree_nb(4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 316 µs, sys: 0 ns, total: 316 µs\n",
+      "Wall time: 320 µs\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 36.00,  36.32,  36.65, ..., 3095.69, 3123.50, 3151.57],\n",
+       "       [  0.00,  35.68,  36.00, ..., 3040.81, 3068.13, 3095.69],\n",
+       "       [  0.00,   0.00,  35.36, ..., 2986.89, 3013.73, 3040.81],\n",
+       "       ...,\n",
+       "       [  0.00,   0.00,   0.00, ...,   0.42,   0.42,   0.43],\n",
+       "       [  0.00,   0.00,   0.00, ...,   0.00,   0.41,   0.42],\n",
+       "       [  0.00,   0.00,   0.00, ...,   0.00,   0.00,   0.41]])"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time simulate_tree_nb(500)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
