--- a/speed_up.ipynb
+++ b/speed_up.ipynb
@@ -4169,10 +4169,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "148 µs ± 2.75 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit simulate_tree_nb(500)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cython "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%cython -a\n",
+    "import numpy as np\n",
+    "cimport cython\n",
+    "from libc.math cimport exp, sqrt\n",
+    "\n",
+    "cdef float S0 = 36.\n",
+    "cdef float T = 1.0\n",
+    "cdef float r = 0.06\n",
+    "cdef float sigma = 0.2\n",
+    "\n",
+    "def simulate_tree_cy(int M):\n",
+    "    cdef int z, t, i\n",
+    "    cdef float dt, u, d\n",
+    "    cdef float[:, :] S = np.zeros((M + 1, M + 1), dtype=np.float32)\n",
+    "    dt = T / M\n",
+    "    u = exp(sigma * sqrt(dt))\n",
+    "    d = 1 / u\n",
+    "    S[0, 0] = S0\n",
+    "    z = 1\n",
+    "    for t iin range(1, M + 1): \n",
+    "        for i in range(z):\n",
+    "            S[i, t] = S[i, t-1] * u\n",
+    "            S\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
