--- a/speed_up.ipynb
+++ b/speed_up.ipynb
@@ -5052,6 +5052,87 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "K = 40"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "C0 = math.exp(-r * T) * np.maximum(K - S[-1], 0).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "37.670581343369946"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "C0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### NumPy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mcs_simulation_np(p):\n",
+    "    M, I = p\n",
+    "    dt = T / M\n",
+    "    S = np.zeros((M + 1, I))\n",
+    "    S[0] = S0\n",
+    "    rn = np.random.standard_normal(S.shape)\n",
+    "    for t in range(1, M + 1):\n",
+    "        S[t] = S[t-1] * np.exp((r - sigma ** 2 / 2) * dt +\n",
+    "                              sigma * math.sqrt(dt) * rn[t])\n",
+    "    return S"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 151 ms, sys: 4.14 ms, total: 155 ms\n",
+      "Wall time: 141 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time S = mcs_simulation_np((M, I))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
